structure issue presents itself when opening page on mobile. Doesn't happen on browser iinspect mobile mode. I have to push atempted soltions to see if they work

--- a/style.css
+++ b/style.css
@@ -76,6 +76,13 @@ h1 {
 #second-minicard {
     align-content: center;
     margin-top: -10px;
+    animation: match 3.2s ease-out;
+}
+
+@keyframes match {
+    0% {height: 35vh;}
+    75% {height: 35vh;}
+    100% {height: 15vh;}
 }
 
 #third-minicard {
@@ -396,6 +403,7 @@ li {
 
     #skill-area {
         font-size: 16px;
+        margin-top: 2vh;
     }
     
     .skills {
@@ -404,6 +412,7 @@ li {
 
     .details {
         padding: 0 20px;
+        margin-top: 2vh;
     }
 
     #pages {
